--- a/src/components/SiderMenu/index.less
+++ b/src/components/SiderMenu/index.less
@@ -1,10 +1,9 @@
-@import '~antd/lib/style/themes/default.less';
 @ease-in-out-circ: cubic-bezier(0.78, 0.14, 0.15, 0.86);
 .logo {
   height: 64px;
   position: relative;
   line-height: 64px;
-  padding-left: (@menu-collapsed-width - 32px) / 2;
+  // padding-left: (@menu-collapsed-width - 32px) / 2;
   transition: all 0.3s;
   background: #002140;
   overflow: hidden;
@@ -65,7 +64,7 @@
   }
   .ant-menu-item .sider-menu-item-img + span,
   .ant-menu-submenu-title .sider-menu-item-img + span {
-    transition: opacity 0.3s @ease-in-out, width 0.3s @ease-in-out;
+    // transition: opacity 0.3s @ease-in-out, width 0.3s @ease-in-out;
     opacity: 1;
   }
 }
