--- a/src/layouts/UserLayout.less
+++ b/src/layouts/UserLayout.less
@@ -28,13 +28,13 @@
     text-align: center;
 }
 
-.header {
-    height: 44px;
-    line-height: 44px;
-    a {
-        text-decoration: none;
-    }
-}
+// .header {
+//     height: 44px;
+//     line-height: 44px;
+//     a {
+//         text-decoration: none;
+//     }
+// }
 
 .logo {
     height: 44px;
