--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -1,6 +1,6 @@
 @import '~antd/lib/style/themes/default.less';
 
-.header {
+.globl-header  {
   height: 64px;
   padding: 0 12px 0 0;
   background: #fff;
